--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f1f5f8;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.loading {
+  text-align: center;
+}
+
+.outer-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.inner-container {
+  width: 90%;
+  margin: 4rem 0;
+}
+
+.title h1 {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.title hr {
+  width: 5%;
+  height: 5px;
+  border: none;
+  background-color: #2caeba;
+}
+
+.body-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+
+.content-wrap {
+  width: 80%;
+}
+
+.content-wrap h1 {
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+
+.content-wrap h3 {
+  color: #617d98;
+  background-color: #dae2ec;
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 18px;
+  letter-spacing: 1.25px;
+}
+
+.content-wrap .date {
+  color: #617d98;
+  font-size: larger;
+  letter-spacing: 2px;
+}
+
+.list {
+  margin: 1.5rem 0;
+}
+
+.list p {
+  display: inline;
+  margin-left: 1.5rem;
+  font-size: larger;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.btn {
+  display: block;
+  margin: 2rem 0;
+  background-color: transparent;
+  border: none;
+  font-size: 22px;
+  letter-spacing: 1.5px;
+  padding-left: 1.5rem;
+  border-left: 3px solid transparent;
+}
+
+.btn:hover {
+  cursor: pointer;
+  color: #2caeba;
+  border-left: 3px solid #2caeba;
+}
+
+.active-btn {
+  color: #2caeba;
+  border-left: 3px solid #2caeba;
 }
